# Seamless-8

./: .gitignore
RustCore/: Cargo.toml  build.rs  cbindgen.toml  rust_core.h
RustCore/include/: rust_core.h
RustCore/proto/: record.proto
RustCore/scripts/: build_xcframework.sh
RustCore/src/: core.rs  lib.rs
Seamless 8.xcodeproj/: project.pbxproj
Seamless 8.xcodeproj/xcuserdata/dev.xcuserdatad/xcschemes/: xcschememanagement.plist
Sources/: ContentView.swift  RustCoreBridge.h  Seamless_8App.swift  callc.swift
Sources/Include/: rust_core.h
Sources/Swift/: ViewController.swift
