[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_core"
crate-type = ["staticlib"]  # produces librust_core.a for XCFramework

[dependencies]
# Formats
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
prost = "0.13"
bytes = "1"
rayon = "1.10"
base64 = "0.21"   # needed for Binary->JSON base64 wrap

[build-dependencies]
prost-build = "0.13"
cbindgen = "0.27"
